Fix z-index issue with blender nav

--- a/common/static/common/styles/studio/_navbar.scss
+++ b/common/static/common/styles/studio/_navbar.scss
@@ -470,3 +470,7 @@ div.spacer-n {
 .subscriber {
   background: $success;
 }
+
+.blender-navbar {
+  z-index: 1046;
+}
